# bonak

./: _CoqProject  bonak.opam  dune-project
.github/workflows/: coq-action.yml
theories/: dune
theories/νSet/: HGpd.v  HSet.v  HVec.v  RewLemmas.v  SemiSimplicialGpd.v  SigT.v  νDgnSet.v  νGpd.v  νSet.v
