opam-version: "2.0"
name: "bonak"
synopsis: "An indexed construction of semi-simplicial and semi-cubical types"
maintainer: "Ramkumar Ramachandra <r@artagnon.com>"
authors: [ "Ramkumar Ramachandra <r@artagnon.com>"
          "Hugo Herbelin <hugo.herbelin@inria.fr>" ]
license: "MIT"
homepage: "https://github.com/artagnon/bonak"
bug-reports: "https://github.com/artagnon/bonak/issues"
dev-repo: "git+https://github.com/artagnon/bonak"
depends: [
  "rocq-core"   { >= "9.2.0" }
  "rocq-stdlib"
  "dune"        { >= "3.22.0" }
]
build: [
  ["dune" "build"]
]
url {
  src: "git+https://github.com/artagnon/bonak.git#master"
}
